src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_the_offer_to_create_a_branch_that_does_not_exist.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 92, 10)"
---
" / feat/brand-new█                                                     ⇅ state ↓   1 branch "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
"   + feat/brand-new  create                                                                 "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" feat/brand-new · does not exist yet ───────────────────────────────────────────────────────"
" ↵ choose  ctrl+u clear  esc cancel  ↑↓ move  ctrl+f fetch  ctrl+o order  ctrl+r reverse    "
