src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_the_order_beside_the_count_and_reorders_the_list_to_match.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 92, 12)"
---
" / search branches                                                 ⇅ updated ↓   5 branches "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
"   · main         local        latest work on main                                          "
"   ● feat/login   running      #123 Add the login screen (draft)                            "
"   ○ fix/crash    checked out  latest work on fix/crash                                     "
"   · chore/deps   local        latest work on chore/deps                                    "
"   ↓ feat/search  remote                                                                    "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" main · local branch, no worktree yet ──────────────────────────────────────────────────────"
" ↵ choose  j/k move  / search  f fetch  i order  shift+i reverse  ⇥ panes  esc back  q close"
