src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_the_repositories_the_session_has_open.snap
---
source: src/ui/render.rs
expression: "branches_screen(&branches_picker(), 92, 12)"
---
" / search repositories                                                       2 repositories "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ me/app    2 worktrees, 1 pane    /src/app                                                "
"   me/notes  1 worktree, 1 pane     ~/src/notes                                             "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" me/app · /src/app ─────────────────────────────────────────────────────────────────────────"
" ↵ branches  j/k move  / search  ⇥ panes  q close                                           "
