src/ui/snapshots/herdr_worktree_nav__ui__render__tests__draws_the_step_it_is_on_instead_of_the_question_it_already_asked.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 110, 14)"
---
" ⠋ fetching origin/chore/deps…                                                                                "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" here            split right                    w1  app / agents                                              "
"                 split down                     ┌─────┬──────┐                                                "
" existing tab    w1  app / logs                 ├─────┴──────┤                                                "
" existing space  w3  notes → new tab            │ · shell  w…│                                                "
" new space       on its own                     └────────────┘                                                "
" existing tab    w3  notes / zoomed                                                                           "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" chore/deps opens beside the pane you came from, split right ─────────────────────────────────────────────────"
" ctrl+c stop                                                                                                  "
